--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
                 <h2>Your Webhook URL</h2>
                 <div class="webhook-url-container">
                     <input type="text" id="webhookUrl" class="webhook-input" readonly placeholder="Your webhook URL will appear here">
+                    <button id="generateBtn" class="btn btn-secondary" style="display: none;"><i class="fa-solid fa-dice"></i> Generate</button>
                     <button id="copyBtn" class="btn btn-secondary" disabled><i class="fa-regular fa-copy"></i> Copy</button>
                 </div>
                 <p class="info-text">Share this URL to receive webhook requests</p>
